--- a/style.css
+++ b/style.css
@@ -66,13 +66,13 @@ html, body {
 }
 
 .innerTableContainer {
-    padding-top: 45px;
+    padding-top:8vh;
 
     position: relative;
 
-    height: 300px;
+    height: calc(100vh - 175px);
 
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
 }
 
@@ -86,8 +86,8 @@ html, body {
     border-radius: 40px;
 
     width: 90px;
-    height: 45px;
-    line-height: 45px;
+    height: 6vh;
+    line-height: 6vh;
     float: right;
 
     text-align: center;
@@ -97,7 +97,7 @@ html, body {
     font-size: 14px;
 
     right: 10px;
-    top: 10px;
+    top: 1vh;
 
     /* Stop from highlighting */
     -webkit-touch-callout: none;
@@ -176,13 +176,18 @@ html, body {
     resize: both;
     overflow: auto;
     /* Set initial size */
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 87vh;
     /* Set max width/height */
     max-width: 100%;
     max-height: 100%;
     /* Margin */
-    margin: 20px;
+    margin: 0px;
+}
+
+.ui-tabs .ui-tabs-panel{
+    height: calc(100vh - 175px);
+    overflow-y:scroll!important;
 }
 
 .hidden{
@@ -190,6 +195,11 @@ html, body {
 }
 
 #tables{
+    padding:0px!important;
+    overflow:hidden!important;
+}
+
+.ui-tabs-panel{
     padding:0px!important;
 }
 
