--- a/style.css
+++ b/style.css
@@ -173,11 +173,11 @@ html, body {
 /* Housing for table element */
 #tableContainer {
     /* Allow for parent resizing */
-    resize: both;
+    resize: none;
     overflow: auto;
     /* Set initial size */
     width: 100%;
-    height: 87vh;
+    height: calc(100vh - 230px);
     /* Set max width/height */
     max-width: 100%;
     max-height: 100%;
@@ -187,7 +187,6 @@ html, body {
 
 .ui-tabs .ui-tabs-panel{
     height: calc(100vh - 175px);
-    overflow-y:scroll!important;
 }
 
 .hidden{
@@ -201,6 +200,7 @@ html, body {
 
 .ui-tabs-panel{
     padding:0px!important;
+    overflow-y:hidden!important;
 }
 
 table {
@@ -271,4 +271,9 @@ tr .active {
     60% {
         box-shadow: 0px 0px 70px rgba(0, 0, 0, 0);
     }
+}
+
+
+.calculatorInput{
+  text-transform:uppercase;
 }
